--- a/sass/_community.scss
+++ b/sass/_community.scss
@@ -13,9 +13,10 @@ main {
 			h2{
 				font-size: 50px;
 				margin-bottom: 20px;
+				margin-top: 50px;
 			}
 			.faq-pic {
-				width: 1180px;
+				width: 100%;
 				height: 400px;
 				text-align: center;
 				background: #000;
@@ -107,12 +108,15 @@ main {
                         max-height: 0;
                         overflow: hidden;
                         transition: 0.5s ease-in-out;
+
                         .faq-item-body-content{
                             font: 20px/1 'Faustina';
                             text-align: center;
                             padding: 20px 30px;
                             margin: 10px 0px;
                             line-height: 1.5rem;
+							border-top: 1px solid #000;
+							border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
                             
                         }
                     }
@@ -120,4 +124,469 @@ main {
 			}
 		}
 	}
+}
+
+
+// 랩탑
+
+@media screen and (max-width: 999px) {
+	main {
+		.content {
+			.inner {
+				width: 100%;
+				height: 1700px;
+
+				h2{
+					font-size: 50px;
+					margin-bottom: 20px;
+					margin-top: 50px;
+				}
+				.faq-pic {
+					width: 100%;
+					height: 400px;
+					text-align: center;
+					background: #000;
+						img {
+						width: 100%;
+						height: 100%;
+						opacity: 0.5;
+						object-fit: cover;
+					}
+					i {
+						display: block;
+						position: relative;
+						top: -350px;
+						font-size: 40px;
+						color: #fff;
+					}
+					p {
+						display: block;
+						position: relative;
+						top: -300px;
+						font: 30px/1 "Faustina";
+						color: #fff;
+					}
+					a {
+						width: 200px;
+						height: 30px;
+						display: flex;
+						justify-content: center;
+						position: relative;
+						top: -190px;
+						left: 41%;
+						font: 20px/1.2"Faustina";
+						color: #fff;
+						border: 2px solid #fff;
+						border-radius: 20px;
+						transition: 0.5s;
+						&:hover{
+							transform: scale(1.1);
+						}
+					}
+				}
+	
+				ul {
+					width: 100%;
+					margin: 40px 0px;
+					padding: 0px 100px;
+					display: flex;
+					justify-content: space-between;
+					li {
+						width: 200px;
+						height: 50px;
+						float: left;
+						font: 25px/1 "Faustina";
+						a {
+							line-height: 1.7;
+							color: $navy;
+						}
+					}
+				}
+				.faq {
+
+					.faq-item {
+
+						.faq-item-header{
+							&::after{
+								content: "\002+";
+								font-size: 2rem;
+								position: absolute;
+								right: 8rem;
+							}
+							&.active::after{
+								content: "\2212";
+							}
+						}
+						.faq-item-body{
+							margin: 0 auto;
+							width: 900px;
+							max-height: 0;
+							overflow: hidden;
+							transition: 0.5s ease-in-out;
+	
+							.faq-item-body-content{
+								font: 20px/1 'Faustina';
+								text-align: center;
+								padding: 20px 30px;
+								margin: 10px 0px;
+								line-height: 1.5rem;
+								border-top: 1px solid #000;
+								border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
+								
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
+}
+
+@media screen and (max-width: 820px) {
+	main {
+		.content {
+			.inner {
+				width: 100%;
+				height: 1700px;
+
+				h2{
+					font-size: 50px;
+					margin-bottom: 20px;
+					margin-top: 50px;
+				}
+				.faq-pic {
+					width: 100%;
+					height: 400px;
+					text-align: center;
+					background: #000;
+					img {
+						width: 100%;
+						height: 100%;
+						opacity: 0.5;
+						object-fit: cover;
+					}
+					i {
+						display: block;
+						position: relative;
+						top: -350px;
+						font-size: 40px;
+						color: #fff;
+					}
+					p {
+						display: block;
+						position: relative;
+						top: -300px;
+						font: 30px/1 "Faustina";
+						color: #fff;
+					}
+					a {
+						width: 200px;
+						height: 30px;
+						display: flex;
+						justify-content: center;
+						position: relative;
+						top: -190px;
+						left: 38%;
+						font: 20px/1.2"Faustina";
+						color: #fff;
+						border: 2px solid #fff;
+						border-radius: 20px;
+						transition: 0.5s;
+						&:hover{
+							transform: scale(1.1);
+						}
+					}
+				}
+	
+				ul {
+					width: 100%;
+					margin: 40px 0px;
+					padding: 0px 100px;
+					display: flex;
+					justify-content: space-between;
+					li {
+						width: 200px;
+						height: 50px;
+						float: left;
+						font: 25px/1 "Faustina";
+						a {
+							line-height: 1.7;
+							color: $navy;
+						}
+					}
+				}
+				.faq {
+
+					.faq-item {
+
+						.faq-item-header{
+							&::after{
+								content: "";
+								font-size: 2rem;
+								position: absolute;
+								right: 3rem;
+							}
+							&.active::after{
+								content: "";
+							}
+						}
+						.faq-item-body{
+							width: 700px;
+							max-height: 0;
+							overflow: hidden;
+							transition: 0.5s ease-in-out;
+	
+							.faq-item-body-content{
+								font: 20px/1 'Faustina';
+								text-align: center;
+								padding: 20px 30px;
+								margin: 10px 0px;
+								line-height: 1.5rem;
+								border-top: 1px solid #000;
+								border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
+								
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
+}
+@media screen and (max-width: 635px) {
+	main {
+		.content {
+			.inner {
+				width: 100%;
+				height: 1700px;
+
+				h2{
+					font-size: 50px;
+					margin-bottom: 20px;
+					margin-top: 50px;
+				}
+				.faq-pic {
+					width: 100%;
+					height: 400px;
+					text-align: center;
+					background: #000;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					flex-wrap: wrap;
+					img {
+						width: 100%;
+						height: 100%;
+						opacity: 0.5;
+						object-fit: cover;
+					}
+					i {
+						display: block;
+						position: relative;
+						top: -350px;
+						font-size: 40px;
+						color: #fff;
+					}
+					p {
+						display: block;
+						position: relative;
+						top: -300px;
+						font: 30px/1 "Faustina";
+						color: #fff;
+					}
+					a {
+						width: 200px;
+						height: 30px;
+						display: flex;
+						justify-content: center;
+						position: relative;
+						top: -190px;
+						left: 0%;
+						font: 20px/1.2"Faustina";
+						color: #fff;
+						border: 2px solid #fff;
+						border-radius: 20px;
+						transition: 0.5s;
+						&:hover{
+							transform: scale(1.1);
+						}
+					}
+				}
+	
+				ul {
+					width: 100%;
+					margin: 40px 0px;
+					padding: 0px 100px;
+					display: flex;
+					justify-content: space-between;
+					li {
+						width: 200px;
+						height: 50px;
+						float: left;
+						font: 25px/1 "Faustina";
+						a {
+							line-height: 1.7;
+							color: $navy;
+						}
+					}
+				}
+				.faq {
+
+					.faq-item {
+
+						.faq-item-header{
+							font-size: 20px;
+							&::after{
+								content: "";
+								font-size: 2rem;
+								position: absolute;
+								right: 3rem;
+							}
+							&.active::after{
+								content: "";
+							}
+						}
+						.faq-item-body{
+							width: 600px;
+							max-height: 0;
+							overflow: hidden;
+							transition: 0.5s ease-in-out;
+	
+							.faq-item-body-content{
+								font: 20px/1 'Faustina';
+								text-align: center;
+								padding: 20px 30px;
+								margin: 10px 0px;
+								line-height: 1.5rem;
+								border-top: 1px solid #000;
+								border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
+								
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
+}
+
+@media screen and (max-width: 425px) {
+	main {
+		.content {
+			.inner {
+				width: 100%;
+				height: 1500px;
+
+				h2{
+					font-size: 50px;
+					margin-bottom: 20px;
+					margin-top: 50px;
+				}
+				.faq-pic {
+					width: 100%;
+					height: 400px;
+					text-align: center;
+					background: #000;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					flex-wrap: wrap;
+					img {
+						width: 100%;
+						height: 100%;
+						opacity: 0.5;
+						object-fit: cover;
+					}
+					i {
+						display: block;
+						position: relative;
+						top: -350px;
+						font-size: 40px;
+						color: #fff;
+					}
+					p {
+						display: block;
+						position: relative;
+						top: -300px;
+						font: 20px/1 "Faustina";
+						color: #fff;
+					}
+					a {
+						width: 200px;
+						height: 30px;
+						display: flex;
+						justify-content: center;
+						position: relative;
+						top: -190px;
+						left: 0%;
+						font: 20px/1.2"Faustina";
+						color: #fff;
+						border: 2px solid #fff;
+						border-radius: 20px;
+						transition: 0.5s;
+						&:hover{
+							transform: scale(1.1);
+						}
+					}
+				}
+	
+				ul {
+					width: 100%;
+					margin: 40px 0px;
+					padding: 0px 100px;
+					display: flex;
+					justify-content: space-between;
+					li {
+						width: 200px;
+						height: 50px;
+						float: left;
+						font: 25px/1 "Faustina";
+						a {
+							line-height: 1.7;
+							color: $navy;
+						}
+					}
+				}
+				.faq {
+
+					.faq-item {
+
+						.faq-item-header{
+							font-size: 15px;
+							&::after{
+								content: "";
+								font-size: 2rem;
+								position: absolute;
+								right: 3rem;
+							}
+							&.active::after{
+								content: "";
+							}
+						}
+						.faq-item-body{
+							width: 400px;
+							max-height: 0;
+							overflow: hidden;
+							transition: 0.5s ease-in-out;
+	
+							.faq-item-body-content{
+								font: 15px/1 'Faustina';
+								text-align: center;
+								padding: 20px 30px;
+								margin: 10px 0px;
+								line-height: 1.5rem;
+								border-top: 1px solid #000;
+								border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
+								
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
 }
