--- a/sass/_youtube.scss
+++ b/sass/_youtube.scss
@@ -1,82 +1,285 @@
-.vidList {
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	article {
-		width: 100%;
-		height: 250px;
-		border: 1px solid $navy;
-		margin-bottom: 20px;
-		.pic {
-			display: block;
-			width: 37%;
-			height: 100%;
-			img {
-				width: 100%;
-				height: 100%;
-			}
-		}
-		.con {
-			width: 63%;
-			height: 100%;
-			padding: 40px;
-			position: relative;
-			top: -100%;
-			left: 37%;
-			background: #eee;
-			h2 {
-				font: bold 30px/1 $h;
-				color: $navy;
-				margin-bottom: 20px;
-			}
-			p {
-				font: 15px/1 $p;
-				color: $navy;
-				margin-bottom: 50px;
-			}
-			span {
-				font: 20px/1 $h;
-			}
-		}
-		.title {
-			display: block;
-			width: 100%;
-			height: 30px;
-			font: bold 30px/1 $h;
-			color: $navy;
-			margin-bottom: 40px;
-		}
-	}
-}
-
-figure.pop {
-	width: 100%;
-	height: 100vh;
-	position: fixed;
-	top: 0%;
-	left: 0%;
-	background: rgba(0, 0, 0, 0.6);
-	overflow: hidden;
-	padding: 5vw;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	.btnClose {
-		position: absolute;
-		top: 30px;
-		right: 80px;
-		color: #fff;
-		cursor: pointer;
-	}
-
-}
 .youtube {
-	h2 {
+	h2{
 		font: bold 50px/1 $h;
-        margin-top: 100px;
-		margin-bottom: 100px;
+		margin-bottom: 50px;
+	}
+	.inner {
+		width: 1180px;
+		.vidList {
+			width: 100%;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			align-items: center;
+			article {
+				width: 100%;
+				height: 250px;
+				margin-bottom: 20px;
+				.pic {
+					display: block;
+					width: 37%;
+					height: 100%;
+					img {
+						width: 100%;
+						height: 100%;
+					}
+				}
+				.con {
+					width: 63%;
+					height: 100%;
+					padding: 40px;
+					position: relative;
+					top: -100%;
+					left: 37%;
+					background: #eee;
+					p {
+						font: 15px/1 $p;
+						color: $navy;
+						margin-bottom: 50px;
+					}
+					span {
+						font: 20px/1 $h;
+					}
+				}
+				.title {
+					display: block;
+					width: 100%;
+					height: 30px;
+					font: bold 30px/1 $h;
+					color: $navy;
+					margin-bottom: 40px;
+				}
+			}
+		}
+	}
+
+	figure.pop {
+		width: 100%;
+		height: 100vh;
+		position: fixed;
+		top: 0%;
+		left: 0%;
+		background: rgba(0, 0, 0, 0.6);
+		overflow: hidden;
+		padding: 5vw;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		.btnClose {
+			position: absolute;
+			top: 30px;
+			right: 80px;
+			color: #fff;
+			cursor: pointer;
+		}
+	}
+
+	}
+// 랩탑구역ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+// 랩탑구역ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+// 랩탑구역ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+// 랩탑구역ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+@media screen and (max-width: 1179px) {
+	.youtube {
+		height: 2800px;
+		.inner {
+			.vidList {
+				width: 100%;
+				article {
+					width: 80%;
+					height: 250px;
+					margin-bottom: 20px;
+					.pic {
+						display: block;
+						width: 37%;
+						height: 100%;
+						img {
+							width: 100%;
+							height: 100%;
+						}
+					}
+					.con {
+						width: 63%;
+						height: 100%;
+						padding: 40px;
+						position: relative;
+						top: -100%;
+						left: 37%;
+						background: #eee;
+
+						p {
+							font: 15px/1 $p;
+							color: $navy;
+							margin-bottom: 50px;
+						}
+						span {
+							font: 15px/1 $h;
+						}
+					}
+					.title {
+						display: block;
+						width: 100%;
+						height: 30px;
+						font: bold 25px/1 $h;
+						color: $navy;
+						margin-bottom: 40px;
+					}
+				}
+			}
+		}
+		figure.pop {
+			height: 600px;
+			top: 12%;
+			.btnClose {
+				position: absolute;
+				top: 30px;
+				right: 80px;
+				color: #fff;
+				cursor: pointer;
+			}
+		}
+	}
+}
+
+// 모바일구역 ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+// 모바일구역 ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+// 모바일구역 ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+// 모바일구역 ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+@media screen and (max-width: 820px) {
+	.youtube {
+		height: 2800px;
+		.inner {
+			width: 100%;
+			.vidList {
+				width: 100%;
+				article {
+					width: 100%;
+					height: 250px;
+					margin-bottom: 20px;
+					.pic {
+						display: block;
+						width: 37%;
+						height: 100%;
+						img {
+							width: 100%;
+							height: 100%;
+						}
+					}
+					.con {
+						width: 63%;
+						height: 100%;
+						padding: 40px;
+						position: relative;
+						top: -100%;
+						left: 37%;
+						background: #eee;
+
+						p {
+							font: 15px/1 $p;
+							color: $navy;
+							margin-bottom: 50px;
+						}
+						span {
+							font: 15px/1 $h;
+						}
+					}
+					.title {
+						display: block;
+						width: 100%;
+						height: 30px;
+						font: bold 25px/1 $h;
+						color: $navy;
+						margin-bottom: 40px;
+					}
+				}
+			}
+		}
+		figure.pop {
+			height: 600px;
+			top: 12%;
+			.btnClose {
+				position: absolute;
+				top: 30px;
+				right: 80px;
+				color: #fff;
+				cursor: pointer;
+			}
+		}
+	}
+}
+
+// 모바일구역 ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+// 모바일구역 ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+// 모바일구역 ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+// 모바일구역 ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+
+
+@media screen and (max-width: 425px) {
+
+	@media screen and (max-width: 820px) {
+		.youtube {
+			height: 4200px;
+			.inner {
+				width: 100%;
+				.vidList {
+					width: 100%;
+					article {
+						width: 100%;
+						height: 250px;
+						margin-bottom: 40%;
+						.pic {
+							display: block;
+							width: 100%;
+							height: 100%;
+							img {
+								width: 100%;
+								height: 100%;
+							}
+						}
+						.con {
+							width: 100%;
+							height: 40px;
+							position: relative;
+							top: 0;
+							left: 0%;
+							background: #fff;
+	
+							p {
+								font: 13px/1 $p;
+								color: $navy;
+								margin-bottom: 50px;
+								position: relative;
+								top: -70px;
+							}
+							span {
+								display: none;
+							}
+						}
+						.title {
+							display: block;
+							width: 100%;
+							height: 30px;
+							position: relative;
+							top: -25px;
+							font: bold 15px/1 $h;
+							color: $navy;
+							margin-bottom: 40px;
+						}
+					}
+				}
+			}
+			figure.pop {
+				height: 300px;
+				top: 12%;
+				.btnClose {
+					position: absolute;
+					top: 30px;
+					right: 80px;
+					color: #fff;
+					cursor: pointer;
+				}
+			}
+		}
 	}
 }
