--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,11 @@ body #header .inner {
   margin: 0 auto;
   position: relative;
   padding-top: 30px;
+  z-index: 4;
+}
+body #header .inner .logo {
+  position: relative;
+  left: -48%;
 }
 body #header .inner a {
   display: flex;
@@ -37,11 +42,12 @@ body #header .inner a {
   font: bold 60px/1 "DM Serif Display";
   color: rgb(20, 1, 73);
   overflow: hidden;
+  z-index: 4;
 }
 body #header .inner .menuWeb #gnb {
   position: absolute;
-  left: 0%;
-  bottom: 0;
+  left: 5%;
+  bottom: 65%;
 }
 body #header .inner .menuWeb #gnb li {
   float: left;
@@ -49,7 +55,7 @@ body #header .inner .menuWeb #gnb li {
 body #header .inner .menuWeb #gnb li a {
   display: block;
   padding: 0px 40px;
-  font: bold 20px/1 "Faustina";
+  font: bold 18px/1 "Faustina";
   color: #000;
   position: relative;
   left: 120px;
@@ -190,10 +196,10 @@ body #header .inner .btnCall.on span {
 }
 body #visure {
   width: 100%;
-  height: 700px;
+  height: 800px;
   overflow: hidden;
   position: relative;
-  top: 70px;
+  top: -120px;
   margin-bottom: 150px;
 }
 body #visure video {
@@ -1454,21 +1460,19 @@ body #footer .inner .contact .copy {
 }
 .content .inner .byred_text {
   height: 400px;
-  font: 25px/2 "Faustina";
+  font: 20px/2 "Faustina";
   margin-bottom: 200px;
+  padding: 50px;
   color: #fff;
   background: rgb(20, 1, 73);
   border-radius: 50%;
 }
-.content .inner .byred_text span {
+.content .inner .byred_text h2 {
   font: 50px/1 "DM Serif Display";
-  position: relative;
-  top: 0px;
+  margin-top: 20px;
 }
 .content .inner .byred_text p {
-  position: relative;
-  top: 30px;
-  padding: 40px;
+  padding: 0px 40px;
 }
 .content .inner .wrap {
   width: 100%;
@@ -2831,6 +2835,7 @@ main .content .inner .faq .faq-item .faq-item-body .faq-item-body-content {
   float: left;
   width: 25%;
   padding: 10px;
+  transition: 1s;
 }
 #gallery #wrap #list li div {
   width: 100%;
@@ -2869,12 +2874,8 @@ main .content .inner .faq .faq-item .faq-item-body .faq-item-body-content {
 #gallery #wrap #list li div:hover a > img {
   filter: grayscale(0%);
 }
-#gallery #wrap #list li div:hover p {
-  opacity: 1;
-  position: relative;
-  top: -40%;
-  font-size: 20px;
-  color: #fff;
+#gallery #wrap #list li:hover {
+  transform: rotateY(360deg);
 }
 
 aside {
@@ -3039,4 +3040,14 @@ body a main article img {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+body .btn_index {
+  display: block;
+  text-align: center;
+  width: 300px;
+  position: absolute;
+  top: 85%;
+  left: 40%;
+  font: bold 20px/1 "Faustina";
+  color: rgb(20, 1, 73);
 }/*# sourceMappingURL=style.css.map */
