--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -53,6 +53,7 @@
 					float: left;
 					width: calc(100% / 4);
 					padding: 10px;
+					transition: 1s;
 					div {
 						width: 100%;
                         height: 200px;
@@ -91,14 +92,8 @@
 						&:hover a > img {
 							filter: grayscale(0%);
 						}
-                        &:hover p {
-                            opacity: 1;
-                            position: relative;
-                            top: -40%;
-                            font-size: 20px;
-                            color: #fff;
-                            
-                        }
+					}&:hover{
+						transform: rotateY(360deg);
 					}
 				}
 			}
