--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -11,24 +11,30 @@ body {
 			margin: 0 auto;
 			position: relative;
 			padding-top: 30px;
+			z-index: 4;
+			.logo{
+				position: relative;
+				left: -48%;
+			}
 			a {
 				display: flex;
 				justify-content: center;
 				font: bold 60px/1 "DM Serif Display";
 				color: $navy;
 				overflow: hidden;
+				z-index: 4;
 			}
 			.menuWeb {
 				#gnb {
 					position: absolute;
-					left: 0%;
-					bottom: 0;
+					left: 5%;
+					bottom: 65%;
 					li {
 						float: left;
 						a {
 							display: block;
 							padding: 0px 40px;
-							font: bold 20px/1 "Faustina";
+							font: bold 18px/1 "Faustina";
 							color: #000;
 							position: relative;
 							left: 120px;
@@ -186,10 +192,10 @@ body {
 
 	#visure {
 		width: 100%;
-		height: 700px;
+		height: 800px;
 		overflow: hidden;
 		position: relative;
-		top: 70px;
+		top: -120px;
 		margin-bottom: 150px;
 		video {
 			width: 100%;
